# book-api-app

./: .env.example  .gitignore  README.md  README.ru.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: deploy.yml  lint.yml
src/: clients.py  config.py  database.py  main.py  models.py  repositories.py  schemas.py  sync.py  usecases.py
src/services/: debug_service.py  events_service.py  tickets_service.py
tests/: test_client.py  test_paginator.py  test_ticket_repo.py  test_usecase.py
tools/: import_check.py
