[project]
name = "events-aggregator"
version = "0.1.0"
description = "Backend aggregator for Events Provider API"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "httpx",
    "apscheduler",
    "python-dotenv",
    "pydantic-settings",
    "email-validator",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
